--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "redis": "^2.8.0",
+    "bunyan": "^1.8.12",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "nconf": "^0.10.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
