--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         context: ./
         dockerfile: Dockerfile.dev
     image: myriade/emerald:dev
-    command: ["bash", "-c", "npm run migration:up && npm run start:dev"]
+    command: ["bash", "-c", "npm run start:dev"]
     environment:
       - NODE_ENV=local
     volumes:
