--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bunyan": "^1.8.12",
     "cryptonight-hashing": "^3.0.5",
     "express": "^4.17.1",
+    "json-rpc-protocol": "^0.13.1",
     "lodash": "^4.17.15",
     "nconf": "^0.10.0",
     "path": "^0.12.7",
