--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "app-module-path": "^2.2.0",
     "bunyan": "^1.8.12",
     "cryptonight-hashing": "^3.0.5",
+    "cryptonote-util": "0.0.1",
     "express": "^4.17.1",
     "json-rpc-protocol": "^0.13.1",
     "lodash": "^4.17.15",
