--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "app-module-path": "^2.2.0",
+    "body-parser": "^1.19.0",
     "bunyan": "^1.8.12",
     "cryptonight-hashing": "^3.0.5",
     "cryptonote-util": "0.0.1",
     "express": "^4.17.1",
+    "jayson": "^3.0.2",
     "json-rpc-protocol": "^0.13.1",
     "lodash": "^4.17.15",
     "nconf": "^0.10.0",
