--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "app-module-path": "^2.2.0",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.12",
     "cryptonight-hashing": "^3.0.5",
