--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,9 +1,11 @@
 FROM ubuntu:18.04
 RUN apt update && apt install -y nodejs npm 
 
-RUN apt-get install libboost-all-dev
+RUN apt-get install -y libboost-all-dev
 
 WORKDIR /usr/src/app
+
+RUN echo "Here"
 
 COPY . .
 RUN npm install
