--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Prototype javascript pool server for Myriade",
   "main": "src/main.js",
+  "repository": "https://github.com/myriadeinc/emerald.git",
   "scripts": {
     "start:dev": "nodemon --inspect=0.0.0.0:9878 -L --ignore test src/main.js",
     "start": "node src/main.js",
