--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.15",
     "nconf": "^0.10.0",
     "path": "^0.12.7",
+    "promise-redis": "0.0.5",
     "redis": "^2.8.0"
   },
   "devDependencies": {
