--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cryptonote-util": "0.0.1",
     "express": "^4.17.1",
     "jayson": "^3.0.2",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "nconf": "^0.10.0",
     "path": "^0.12.7",
