--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.12",
+    "bunyan-formatter": "^1.0.0",
     "cryptonight-hashing": "^3.0.5",
     "cryptonote-util": "0.0.1",
+    "egads": "^1.0.2",
     "express": "^4.17.1",
     "jayson": "^3.0.2",
     "jsonwebtoken": "^8.5.1",
