[PS07] Miner model and integration within Diamond service (#3)

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Prototype javascript pool server for Myriade",
   "main": "src/main.js",
+  "repository": "https://github.com/myriadeinc/emerald.git",
   "scripts": {
     "start:dev": "nodemon --inspect=0.0.0.0:9878 -L --ignore test src/main.js",
     "start": "node src/main.js",
@@ -16,13 +17,17 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.12",
+    "bunyan-formatter": "^1.0.0",
     "cryptonight-hashing": "^3.0.5",
     "cryptonote-util": "0.0.1",
+    "egads": "^1.0.2",
     "express": "^4.17.1",
     "jayson": "^3.0.2",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "nconf": "^0.10.0",
     "path": "^0.12.7",
+    "promise-redis": "0.0.5",
     "redis": "^2.8.0"
   },
   "devDependencies": {
