--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.5.5",
     "app-module-path": "^2.2.0",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
