--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,6 +2,7 @@ FROM ubuntu:18.04
 RUN apt update && apt install -y nodejs npm 
 
 RUN apt-get install -y libboost-all-dev
+RUN apt-get update && apt-get install -y git
 
 WORKDIR /usr/src/app
 
