--- a/package.json
+++ b/package.json
@@ -20,18 +20,19 @@
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.12",
     "bunyan-formatter": "^1.0.0",
+    "cryptonight-hashing": "git+https://github.com/MoneroOcean/node-cryptonight-hashing.git#v15.0.0",
+    "cryptonote-lib": "git+https://github.com/myriadeinc/cryptonote-lib.git",
     "dateformat": "^3.0.3",
     "egads": "^1.0.2",
     "express": "^4.17.1",
     "jayson": "^3.0.2",
+    "json-rpc-client": "^0.2.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "nconf": "^0.10.0",
     "path": "^0.12.7",
     "promise-redis": "0.0.5",
-    "redis": "^2.8.0",
-    "xmr-util": "git+https://github.com/myriadeinc/cryptonote-lib.git",
-    "xmr-hashing": "git+https://github.com/MoneroOcean/node-cryptonight-hashing.git#v15.0.0"
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
