--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "path": "^0.12.7",
     "promise-redis": "0.0.5",
     "redis": "^2.8.0",
-    "xmr-util": "git+https://github.com/myriadeinc/cryptonote-lib.git",
-    "xmr-hashing": "git+https://github.com/MoneroOcean/node-cryptonight-hashing.git#v15.0.0"
+    "cryptonote-lib": "git+https://github.com/myriadeinc/cryptonote-lib.git",
+    "cryptonight-hashing": "git+https://github.com/MoneroOcean/node-cryptonight-hashing.git#v15.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
