--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dateformat": "^3.0.3",
     "egads": "^1.0.2",
     "express": "^4.17.1",
+    "express-json-rpc-router": "^1.0.0",
     "jayson": "^3.0.2",
     "json-rpc-client": "^0.2.2",
     "jsonwebtoken": "^8.5.1",
