--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "egads": "^1.0.2",
     "express": "^4.17.1",
     "express-json-rpc-router": "^1.0.0",
-    "jayson": "^3.0.2",
+    "jayson": "git+https://github.com/myriadeinc/jayson",
     "json-rpc-client": "^0.2.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
