--- a/package.json
+++ b/package.json
@@ -19,22 +19,22 @@
     "bignum": "^0.13.0",
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.12",
-    "logdna-bunyan": "^1.2.0",
     "bunyan-formatter": "^1.0.0",
+    "cryptoforknote-util": "git+https://github.com/MoneroOcean/node-cryptoforknote-util.git#v7.0.0",
+    "cryptonight-hashing": "git+https://github.com/MoneroOcean/node-cryptonight-hashing.git#v16.0.1",
     "dateformat": "^3.0.3",
     "egads": "^1.0.2",
     "express": "^4.17.1",
     "express-json-rpc-router": "^1.0.0",
-    "jayson": "git+https://github.com/myriadeinc/jayson",
+    "jayson": "git+https://github.com/myriadeinc/jayson.git",
     "json-rpc-client": "^0.2.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "logdna-bunyan": "^1.2.0",
     "nconf": "^0.10.0",
     "path": "^0.12.7",
     "promise-redis": "0.0.5",
-    "redis": "^2.8.0",
-    "cryptoforknote-util": "git+https://github.com/MoneroOcean/node-cryptoforknote-util.git#v7.0.0",
-    "cryptonight-hashing": "git+https://github.com/MoneroOcean/node-cryptonight-hashing.git#v16.0.1"
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
