--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,26 @@ jobs:
           db__host: 127.0.0.1
           db__port: 5432
           rabbitmq__url: amqp://guest:guest@127.0.0.1:5672/
+      - image: redis:3.2.3
+        environment:
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: postgres
+          POSTGRES_DB: myriade
       - image: rabbitmq:3.6.4-management
     steps:
       - checkout
       - setup_remote_docker:
           version: 18.06.0-ce
+      - run:
+          name: Waiting for cache to be ready
+          command: |
+            for i in `seq 1 10`;
+            do
+              nc -z localhost 6379 && echo Success && exit 0
+              echo -n .
+              sleep 1
+            done
+            echo Failed waiting for Postgres && exit 1
       - run:
           name: Installing dev dependencies
           command: |
