--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:dev": "nodemon --inspect=0.0.0.0:9878 -L --ignore test src/main.js",
     "start": "node src/main.js",
     "lint:fix": "eslint --fix src",
-    "test": "mocha --color --recursive 'test'"
+    "test": "mocha --color --recursive --exit 'test' "
   },
   "author": "",
   "license": "ISC",
