--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,21 +3,18 @@ jobs:
   build:
     docker:
       # Primary
-      - image: myriadeinc/node-ci:latest
+      - image: node:12.18.3-buster
         environment:
-          db__host: 127.0.0.1
-          db__port: 5432
           rabbitmq__url: amqp://guest:guest@127.0.0.1:5672/
       - image: redis:3.2.3
-        environment:
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_USER: postgres
-          POSTGRES_DB: myriade
       - image: rabbitmq:3.6.4-management
     steps:
       - checkout
       - setup_remote_docker:
           version: 18.06.0-ce
+      - run:
+          name: Installing pre-requisite dependencies
+          command: apt-get -qq update && apt-get install libc6-dev && apt-get -qq install -y libboost-all-dev libsodium-dev libsodium23 netcat
       - run:
           name: Waiting for cache to be ready
           command: |
@@ -27,7 +24,11 @@ jobs:
               echo -n .
               sleep 1
             done
-            echo Failed waiting for Postgres && exit 1
+            echo Failed waiting for Cache && exit 1
+      - run:
+          name: Installing cryptoforknote library
+          command: |
+            npm install https://github.com/myriadeinc/cryptonote-lib.git 
       - run:
           name: Installing dev dependencies
           command: |
@@ -36,6 +37,13 @@ jobs:
           name: Run Tests
           command: |
             npm run test
+      - run:
+          name: Installing Docker to build image
+          command: |
+            apt-get -qq install -y apt-transport-https ca-certificates curl gnupg2 software-properties-common && \
+            curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add && \
+            add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable" && \
+            apt-get -qq update && apt-get install -y docker-ce
       - run:
           name: Build Docker image
           command: |
