--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "express-json-rpc-router": "^1.0.0",
     "express-validator": "^6.4.1",
+    "gelf-stream": "^1.1.1",
     "jayson": "git+https://github.com/myriadeinc/jayson.git",
     "json-rpc-client": "^0.2.2",
     "jsonwebtoken": "^8.5.1",
@@ -34,6 +35,7 @@
     "logdna-bunyan": "^1.2.0",
     "nconf": "^0.10.0",
     "path": "^0.12.7",
+    "prom-client": "^13.1.0",
     "promise-redis": "0.0.5",
     "redis": "^2.8.0"
   },
